# dpdispatcher

./: .coverage.pkrvmqc4gcfdwos.3496.XCpTDScx  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  test_proxy_command_demo.py
.github/: copilot-instructions.md
.github/workflows/: ci-docker.yml  copilot-setup-steps.yml  machines.yml  mirror_gitee.yml  publish_conda.yml  pyright.yml  release.yml  remove-test-bohirum-label.yml  remove-test-bohrium-label.yml  test-bohirum.yml  test-bohrium.yml  test.yml
.history/dpdispatcher/: pbs_20220810100425.py
ci/: LICENSE  README.md  pbs.sh  slurm.sh  ssh.sh  ssh_rsync.sh  torque.sh
ci/pbs/: docker-compose.yml
ci/slurm/: docker-compose.yml
ci/ssh/: docker-compose.yml  start-ssh.sh
ci/torque/: docker-compose.yml  start-torque.sh
conda/: conda_build_config.yaml  meta.yaml
doc/: .gitignore  agent-skill-submit.rst  agent-skills.md  api.rst  batch.md  cli.rst  conf.py  context.md  dpdispatcher_on_yarn.md  dpgen_on_yarn.md  env.md  getting-started.md  index.rst  install.md  machine-auto.rst  machine.rst  pep723.rst  resources-auto.rst  resources.rst  run.md  submit.md  submit.rst  task-auto.rst  task.rst
doc/examples/: expanse.md  g16.md  shell.md  template.md
dpdispatcher/: AWS.py  JobStatus.py  LSF.py  SSHContext.py  Shell.py  Submission.py  __init__.py  __main__.py  _version.py  arginfo.py  base_context.py  batch.py  batch_object.py  distributed_shell.py  dlog.py  dp_cloud_server.py  dp_cloud_server_context.py  dpdisp.py  fugaku.py  hdfs_cli.py  hdfs_context.py  http_context.py  lazy_local_context.py  local_context.py  lsf.py  machine.py  openapi.py  openapi_context.py  pbs.py  run.py  shell.py  slurm.py  ssh_context.py  submission.py  utils.py
dpdispatcher/contexts/: __init__.py  dp_cloud_server_context.py  hdfs_context.py  lazy_local_context.py  local_context.py  openapi_context.py  ssh_context.py
dpdispatcher/dpcloudserver/: __init__.py  api.py  client.py  config.py  retcode.py  temp_test.py  test.py  zip_file.py
dpdispatcher/entrypoints/: __init__.py  gui.py  run.py  submission.py  submit.py
dpdispatcher/machines/: JH_UniScheduler.py  __init__.py  batch.py  distributed_shell.py  dp_cloud_server.py  fugaku.py  lsf.py  openapi.py  pbs.py  shell.py  slurm.py
dpdispatcher/old/: ALI.py  Batch.py  Dispatcher.py  DispatcherList.py  LazyLocalContext.py  LocalContext.py  PBS.py  Slurm.py
dpdispatcher/utils/: JobStatus.py  archive.py  hdfs_cli.py  record.py  utils.py
examples/: dpdisp_run.py  submit_example.json
examples/machine/: expanse.json  lazy_local.json  mandu.json  ssh_jump_host.json  ssh_proxy_command.json
examples/resources/: expanse_cpu.json  mandu.json  template.slurm  tiger.json
examples/task/: deepmd-kit.json  g16.json
scripts/: script_gen_dargs_docs.py  script_gen_dargs_json.py
skills/dpdisp-submit/: SKILL.md
tests/: batch.json  context.py  debug_test_class_submission_init.py  devel_test_JH_UniScheduler.py  devel_test_ali_ehpc.py  devel_test_dp_cloud_server.py  devel_test_lazy_ali_ehpc.py  devel_test_lsf.py  devel_test_shell.py  devel_test_slurm.py  devel_test_ssh_ali_ehpc.py  graph.pb  hello_world.py  sample_class.py  script_gen_json.py  slurm_test.env  ssh_machine.json  test_JH_UniScheduler_script_generation.py  test_ali_ehpc.py  test_allow_ref.py  test_archive.py  test_argcheck.py  test_class_batch_object.py  test_class_job.py  test_class_machine.py  test_class_machine_dispatch.py  test_class_resources.py  test_class_submission.py  test_class_submission_init.py  test_class_task.py  test_clean_strategy.py  test_cli.py  test_dispatcher_utils.py  test_download_error_info.py  test_dpcloudserver_client.py  test_dpcloudserver_zip_file.py  test_examples.py  test_group_size.py  test_hdfs_cli.py  test_hdfs_context.py  (+25 more)
tests/jsons/: compute.dp_cloud_server.json  compute.if_cuda_multi_devices.json  compute.json  compute_ali_ehpc.json  compute_local_shell.json  job.json  machine.if_cuda_multi_devices.json  machine.json  machine_JH_UniScheduler.json  machine_ali_ehpc.json  machine_center.json  machine_diffenert.json  machine_dp_cloud_server.json  machine_fugaku.json  machine_lazy_local_jh_unischeduler.json  machine_lazy_local_lsf.json  machine_lazy_local_slurm.json  machine_lazylocal_shell.json  machine_local_fugaku.json  machine_local_shell.json  machine_lsf.json  machine_openapi.json  machine_slurm.json  machine_yarn.json  resources.json  submission.json  task.json
tests/lsf/: context.py  test_dispatcher.py  test_lsf_local.py
tests/old/: test_dispatcher_utils.py  test_lazy_local_context.py  test_local_context.py  test_local_session.py  test_ssh_context.py
tests/pbs/: context.py  test_dispatcher.py  test_pbs_local.py
tests/shell/: context.py  test_dispatcher.py  test_shell_local.py  test_shell_ssh.py
tests/slurm/: context.py  test_dispatcher.py  test_dispatcher_lazy_local.py  test_slurm_lazy_local.py  test_slurm_local.py  (+1 more)
(+21 files in other folders)
